[74]-state of feature: NewsSubscriber added to db via MVP changelog. Subscribe and GetAll works with swagger